# mtib-mcp-server

./: README.md  generate_proto.sh  pyproject.toml
src/mtib_mcp/: grpc_client.py  server.py
src/mtib_mcp/proto/: mtib_v2_pb2.py  mtib_v2_pb2_grpc.py
