[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mtib-mcp-server"
version = "0.1.0"
description = "MCP server for MTIB V2 embedded test bench"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
dev = ["grpcio-tools>=1.60.0"]

[project.scripts]
mtib-mcp = "mtib_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mtib_mcp"]
